--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
         <p>
           English scientist Tim Berners-Lee co-invented the World Wide Web in 1989 along with Robert Cailliau. He wrote the first web browser in 1990 while employed at CERN near Geneva, Switzerland. The browser was released outside CERN to other research institutions starting in January 1991, and then to the general public in August 1991. The Web began to enter everyday use in 1993–1994, when websites for general use started to become available. The World Wide Web has been central to the development of the Information Age and is the primary tool billions of people use to interact on the Internet.
         </p>
+
+        <div id ="empty_box"></div>
+
       </div>
     </div>
+
+    <p id = "end">
+      e-mail : 000000@gmail.com<br>
+      phone : 010-0000-0000
+    </p>
 
 
   </body>
