--- a/2.html
+++ b/2.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WEB1 - CSS</title>
+    <title>WEB - CSS</title>
     <meta charset="utf-8">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="colors.js"></script>
     <link rel="stylesheet" href="style.css">
 
   </head>
@@ -12,17 +14,28 @@
   <body>
     <h1><a href ="index.html">WEB</a></h1>
 
+
+
     <div id="grid">
-      <ol>
-        <li><a href ="1.html">HTML</a></li>
-        <li><a href ="2.html">CSS</a></li>
-        <li><a href ="3.html">JavaScript</a></li>
-      </ol>
+      <div id ='list'>
+        <input type="button" value="to LIGHT MODE" onclick="
+          darkLightHandler(this);
+        ">
+
+        <br>
+
+        <ol>
+          <li><a href ="1.html">HTML</a></li>
+          <li><a href ="2.html">CSS</a></li>
+          <li><a href ="3.html">JavaScript</a></li>
+        </ol>
+
+      </div>
 
       <div id = "article">
         <h2>WHAT IS 'CSS'?</h2>
         <p>
-          Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+          <span class = "bold">Cascading Style Sheets (CSS)</span> is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
         </p>
 
         <p>
@@ -38,6 +51,6 @@
       e-mail : 000000@gmail.com<br>
       phone : 010-0000-0000
     </p>
-    
+
   </body>
 </html>
